--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -63,7 +63,8 @@
 
   .group {
     border: 1px solid var(--light-blue);
-    padding: 5px;
+    border-radius: 10px;
+    padding: 7px;
     margin-bottom: 5px;
   }
 
