--- a/src/pages/profile/Profile.scss
+++ b/src/pages/profile/Profile.scss
@@ -3,7 +3,7 @@
     width: 100%;
     max-width: 400px;
     padding: 1rem;
-    border: 1px solid var(--color-primary);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   .profile-photo {
     width: 100%;
